# plothist

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.rst  codecov.yml  codecove.yml  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: cd.yaml  ci.yaml  coverage.yaml  pr.yaml  python-package.yml
docs/: CONTRIBUTING.rst  conf.py  index.rst  requirements.txt
docs/advanced/: 1d_advanced.rst  2d_advanced.rst  advanced_examples.rst  hep_examples.rst  model_examples.rst  other_advanced.rst
docs/basics/: 1d_func.rst  1d_hist.rst  2d_hist.rst  variable_manager.rst  variable_registry.rst
docs/documentation/: documentation.rst  hep_plotters.rst  plotters.rst  statistics.rst  troubleshooting.rst
docs/examples/: 1d_comparison_asymmetry.py  1d_comparison_difference.py  1d_comparison_pull.py  1d_comparison_ratio.py  1d_comparison_relative_difference.py  1d_elt1.py  1d_elt1_stacked.py  1d_elt2.py  1d_elt3.py  1d_fct_stacked.py  1d_hist_simple.py  1d_hist_simple2.py  1d_hist_simple3.py  1d_hist_simple4.py  1d_hist_simple5.py  1d_hist_simple6.py  1d_hist_simple61.py  1d_hist_simple7.py  1d_hist_simple71.py  1d_hist_simple8.py  README.rst
docs/examples/1d_func/: 1d_fct.py  1d_fct_stacked.py
docs/examples/1d_hist/: 1d_comparison_asymmetry.py  1d_comparison_difference.py  1d_comparison_efficiency.py  1d_comparison_only_efficiency.py  1d_comparison_pull.py  1d_comparison_ratio.py  1d_comparison_relative_difference.py  1d_comparison_split_ratio.py  1d_elt1.py  1d_elt1_stacked.py  1d_elt2.py  1d_fct.py  1d_fct_stacked.py  1d_hist_simple.py  1d_int_category.py  1d_profile.py  1d_side_by_side.py  1d_str_category.py  README.rst
docs/examples/2d_hist/: 1d_hist_simple.py  2d_hist_correlations.py  2d_hist_simple.py  2d_hist_simple_discrete_colormap.py  2d_hist_uneven.py  2d_hist_with_projections.py  README.rst
docs/examples/advanced/: 1d_comparison_advanced.py  1d_side_by_side.py  1d_side_by_side_with_numbers.py  2d_hist_with_projections.py  README.rst  asymmetry_comparison_advanced.py  model_examples_flatten2D.py
docs/examples/advanced_1d/: 1d_comparison_advanced.py  README.rst
docs/examples/advanced_2d/: 2d_hist_with_projections.py  README.rst
docs/examples/model_ex/: README.rst  model_all_comparisons.py  model_all_comparisons_no_model_unc.py  model_comparisons_ratio_options.py  model_examples_flatten2D.py  model_examples_pull.py  model_examples_pull_no_model_unc.py  model_examples_stacked.py  model_examples_stacked_unstacked.py  model_examples_unstacked.py  model_with_stacked_and_unstacked_function_components.py  model_with_stacked_and_unstacked_histograms_components.py  ratio_data_vs_model_with_stacked_and_unstacked_function_components.py
docs/examples/utilitiy/: matplotlib_vs_plothist_style.py
docs/examples/utility/: README.rst  add_text_example.py  color_palette_hists.py  color_palette_squares.py  matplotlib_vs_plothist_style.py
docs/usage/: font_installation.rst  installation.rst  misc.rst  plot_fitting_results.rst  style.rst  utilities.rst
examples/: advanced_examples.py  basic_examples.py  hep_examples.py  style_example.py
examples/jupyter/: advanced_examples.ipynb  basic_examples.ipynb  hep_examples.ipynb  style_example.ipynb
examples/python/: advanced_examples.py  basic_examples.py  hep_examples.py  style_example.py
plothist/: __init__.py  comparison.py  default_style.mplstyle  generate_dummy_data.py  get_dummy_data.py  hep_plotters.py  histogramming.py  pdfs.py  plothist_style.py  plotters.py  presentation_style.mplstyle  publication_style.mplstyle  small_style.mplstyle  style.mplstyle  variable_registry.py
plothist/scripts/: __init__.py  install_latin_modern_fonts.py  install_latin_modern_fonts.sh  make_examples.py
scripts/: install_latin_modern_fonts.sh
src/plothist/: __init__.py  comparison.py  get_dummy_data.py  histogramming.py  plothist_style.py  plotters.py  test_helpers.py  variable_registry.py
src/plothist/examples/1d_func/: 1d_fct.py
src/plothist/examples/1d_hist/: 1d_comparison_asymmetry.py  1d_comparison_difference.py  1d_comparison_efficiency.py  1d_comparison_pull.py  1d_comparison_relative_difference.py  1d_comparison_split_ratio.py  1d_elt1.py  1d_elt1_stacked.py
src/plothist/examples/2d_hist/: 2d_hist_correlations.py  2d_hist_simple.py  2d_hist_simple_discrete_colormap.py  2d_hist_uneven.py  2d_hist_with_projections.py  README.rst
src/plothist/examples/advanced/: 1d_comparison_advanced.py  1d_side_by_side_with_numbers.py  asymmetry_comparison_advanced.py  model_examples_flatten2D.py
src/plothist/examples/func_1d/: README.rst  fct_1d.py  fct_1d_stacked.py
src/plothist/examples/model_ex/: README.rst  model_all_comparisons.py  model_all_comparisons_no_model_unc.py  model_examples_pull.py  model_examples_pull_no_model_unc.py  model_examples_stacked.py  model_examples_stacked_unstacked.py  model_examples_unstacked.py  model_with_stacked_and_unstacked_function_components.py  model_with_stacked_and_unstacked_histograms_components.py  ratio_data_vs_model_with_stacked_and_unstacked_function_components.py
src/plothist/scripts/: __init__.py  install_latin_modern_fonts.py  make_examples.py
tests/: test_asymmetry.py  test_boost_histogram_version.py  test_comparison.py  test_comparison_asymmetry.py  test_comparison_difference.py  test_comparison_efficiency.py  test_comparison_pull.py  test_comparison_ratio.py  test_difference.py  test_efficiency.py  test_examples.py  test_examples_1d_hist.py  test_examples_2d_hist.py  test_examples_advanced.py  test_examples_data_model.py  test_examples_func_1d.py  test_examples_utility.py  test_find.py  test_fonts.py  test_get_data.py  test_histogramming.py  test_inputs.py  test_install_fonts.py  test_install_fonts_subprocess.py  test_install_fonts_test.py  test_make_examples.py  test_make_figures.py  test_plothist_style.py  test_plotters.py  test_pull.py  test_ratio.py  test_root.py  test_test_helpers.py  test_utils.py  test_variable_registry.py
(+6 files in other folders)
