[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plothist"
description = "Plot histograms in a scalable way and a beautiful style."
version = "1.3.0"
authors = [
    {name = "Cyrille Praz", email = "cyrraz.code@protonmail.com"},
    {name = "Tristan Fillinger", email = "tristan.github@gmail.com"},
    ]
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "boost-histogram>=1.4.0",
    "numpy>=1.14.5",
    "matplotlib>=3.0",
    "pyyaml>=5.3.1",
    "scipy>=1.6.0",
    "requests>=2.25.0",
]

[project.scripts]
install_latin_modern_fonts = "plothist.scripts.install_latin_modern_fonts:install_latin_modern_fonts"
plothist_make_examples = "plothist.scripts.make_examples:make_examples"

[project.urls]
Homepage = "https://github.com/cyrraz/plothist"
Documentation = "https://plothist.readthedocs.io/"
"Bug Tracker" = "https://github.com/cyrraz/plothist/issues"

[tool.codespell]
skip = '*.pdf,./test/*,*.svg,./docs/html/*'
quiet-level = 3
write-changes = true

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
test = [
    "pytest>=8.3.5",
]
