[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "plothist"
description = "Plot histograms in a scalable way and a beautiful style."
authors = [
    {name = "Cyrille Praz", email = "cyrraz.code@protonmail.com"},
    {name = "Tristan Fillinger", email = "tristan.github@gmail.com"},
    ]
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "boost-histogram>=1.4.0",
    "numpy>=1.14.5",
    "matplotlib>=3.0",
    "pyyaml>=5.3.1",
    "scipy>=1.6.0",
    "requests>=2.25.0",
    "plothist_utils>=0.0.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/cyrraz/plothist"
Documentation = "https://plothist.readthedocs.io/"
"Bug Tracker" = "https://github.com/cyrraz/plothist/issues"

[tool.codespell]
skip = '*.pdf,./test/*,*.svg,./docs/html/*'
quiet-level = 3
write-changes = true

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "pytest-mpl>=0.17.0",
]
docs = [
    "sphinx_gallery>=0.17.0",
    "sphinx_rtd_theme>=3.0.0",
    "sphinx-copybutton>=0.5.0",
]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/plothist/_version.py"

[tool.ruff.lint]
extend-select = [
    "B",           # flake8-bugbear
    "I",           # isort
    "C4",          # flake8-comprehensions
    "ISC",         # flake8-implicit-str-concat
    "G",           # flake8-logging-format
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "RUF",         # Ruff-specific
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
    "EXE",         # flake8-executable
    "NPY",         # NumPy specific rules
    "TID251",      # flake8-tidy-imports
    "SIM",         # flake8-simplify
    "RET",         # flake8-return
    "PD",          # pandas-vet
]
ignore = [
    "E402",  # module level import not at top of file
    "NPY002",  # Replace legacy `np.random` call with `np.random.Generator`
    "PD901",  # Avoid using the generic variable name `df` for DataFrames
]
