[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "plothist"
description = "Plot histograms in a scalable way and a beautiful style."
authors = [
    {name = "Cyrille Praz", email = "cyrraz.code@protonmail.com"},
    {name = "Tristan Fillinger", email = "tristan.github@gmail.com"},
    ]
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "boost-histogram>=1.4.0",
    "numpy>=1.14.5",
    "matplotlib>=3.10.8",
    "pyyaml>=6.0.3",
    "scipy>=1.6.0",
    "plothist-utils>=0.0.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/8-hat/plothist"
Documentation = "https://plothist.readthedocs.io/"
"Bug Tracker" = "https://github.com/8-hat/plothist/issues"

[tool.codespell]
skip = '*.pdf,./test/*,*.svg,./docs/html/*'
quiet-level = 3
write-changes = true

[dependency-groups]
dev = [
    "prek>=0.1.1",
]
test = [
    "pytest>=9",
    "pytest-cov>=7",
    "pytest-mpl>=0.18.0",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "pytest-xdist>=3.8.0",
]
docs = [
    "sphinx_gallery>=0.17.0",
    "sphinx_rtd_theme>=3.0.0",
    "sphinx-copybutton>=0.5.0",
]


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/plothist/_version.py"

[tool.ruff.lint]
extend-select = [
    "B",           # flake8-bugbear
    "I",           # isort
    "C4",          # flake8-comprehensions
    "ISC",         # flake8-implicit-str-concat
    "G",           # flake8-logging-format
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "RUF",         # Ruff-specific
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
    "EXE",         # flake8-executable
    "NPY",         # NumPy specific rules
    "TID251",      # flake8-tidy-imports
    "SIM",         # flake8-simplify
    "RET",         # flake8-return
    "PD",          # pandas-vet
]
ignore = [
    "NPY002",  # Replace legacy `np.random` call with `np.random.Generator`
]
[tool.ruff.lint.per-file-ignores]
"src/plothist/examples/**/*.py" = [
    "E402",  # module level import not at top of file
]
